--- a/projekt_frontend/src/app/modules/calendar/calendar.component.css
+++ b/projekt_frontend/src/app/modules/calendar/calendar.component.css
@@ -1,52 +1,110 @@
+.mat-typography h2 {
+  font-family: 'Share Tech Mono', monospace;;
+}
+
+.menu-toggle {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 24px;
+  color: white;
+  margin-bottom: 10%;
+  font-family: 'Share Tech Mono', monospace;
+  display: none;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.sidebar {
+  flex: 1;
+  padding: 2%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.sidebar button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 100%;
+  color: white;
+  margin-bottom: 10%;
+  font-family: 'Share Tech Mono', monospace;
+}
+
 .calendar {
-    font-family: 'Share Tech Mono', monospace;
-    color: white;
-    font-size: 24px;
-    font-weight: bold;
-  }
-  
-  .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 10px;
-  }
-  
-  .header button {
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    font-size: 24px;
-    color: white;
+  flex: 4;
+  font-family: 'Share Tech Mono', monospace;
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  order: 1;
+  margin-right: 10%;
+  height: 100%;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+  font-family: 'Share Tech Mono', monospace;
+}
+
+.header button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 24px;
+  color: white;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th,
+td {
+  text-align: center;
+  padding: 10px;
+}
+
+td {
+  cursor: pointer;
+}
+
+td:hover {
+  background-color: darkgray;
+}
+
+@media screen and (max-width: 768px) {
+  .menu-toggle {
+    display: block; /* Pokaż przycisk na mniejszych ekranach */
   }
 
-  table {
-    width: 100%;
-    border-collapse: collapse;
+  .sidebar{
+    flex: 1;
   }
-  
+
+  .calendar{
+    display: none;
+  }
+
+  .collapsed .sidebar {
+    visibility: hidden;
+    flex: 0;
+  }
+  .container.collapsed .calendar {
+    flex: 1; /* Po zwinięciu menu, kalendarz zajmuje całą dostępną przestrzeń */
+  }
   th,
   td {
-    text-align: center;
-    padding: 10px;
+    padding: 5px;
   }
-  
-  td {
-    cursor: pointer;
-  }
-  
-  td:hover {
-    background-color: darkgray;
-  }
-  
-  @media screen and (max-width: 768px) {
-    .calendar {
-      font-size: 20px;
-    }
-    
-    th,
-    td {
-      padding: 5px;
-    }
-  }
-  
+}
