--- a/projekt_frontend/src/app/modules/calendar/calendar.component.html
+++ b/projekt_frontend/src/app/modules/calendar/calendar.component.html
@@ -1,26 +1,38 @@
-<div class="calendar">
-    <div class="header">
-        <button (click)="previousMonth()">
-            <i class="fas fa-arrow-left"></i>
-          </button>
-      <h2>{{ currentMonth | date: 'MMMM yyyy' }}</h2>
-      <button (click)="nextMonth()">
-        <i class="fas fa-arrow-right"></i>
-      </button>
-    </div>
-    <table>
-      <thead>
-        <tr>
-          <th *ngFor="let day of daysOfWeek">{{ day }}</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let week of weeks">
-          <td *ngFor="let day of week" (click)="selectDate(day)">
-            {{ day.date !== null ? day.date : '' }}
-          </td>
-        </tr>
-      </tbody>
-    </table>
+<div class="container">
+  <div class="sidebar">
+    <button class="menu-toggle" (click)="toggleMenu()">
+      <i class="fa-solid fa-bars"></i>
+    </button>
+    <button (click)="addEvent()">Add Task</button>
+    <button (click)="seeStats()">See Stats</button>
+    <button (click)="myAccount()">My Account</button>
+    <button (click)="logout()">Logout</button>
   </div>
-  
+
+  <div class="calendar">
+      <div class="header">
+          <button (click)="previousMonth()">
+              <i class="fas fa-arrow-left"></i>
+            </button>
+        <h2>{{ currentMonth | date: 'MMMM yyyy' }}</h2>
+        <button (click)="nextMonth()">
+          <i class="fas fa-arrow-right"></i>
+        </button>
+      </div>
+      <table>
+        <thead>
+          <tr>
+            <th *ngFor="let day of daysOfWeek">{{ day }}</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let week of weeks">
+            <td *ngFor="let day of week" (click)="selectDate(day)">
+              {{ day.date !== null ? day.date : '' }}
+              <span *ngIf="day.eventTitle">{{ day.eventTitle }}</span>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+</div>
