--- a/projekt_frontend/src/app/modules/login/login.component.css
+++ b/projekt_frontend/src/app/modules/login/login.component.css
@@ -14,6 +14,7 @@
   .login-container h1 {
     font-size: 32px;
     margin-bottom: 20px;
+    font-family: 'Share Tech Mono', monospace;
   }
   
   .login {
