--- a/projekt_frontend/src/app/modules/login/login.component.html
+++ b/projekt_frontend/src/app/modules/login/login.component.html
@@ -8,7 +8,7 @@
         <input type="password" id="password" placeholder="password" [(ngModel)]="password" name="password" required>
       </div>
       <button type="submit">log in</button>
-      <button type="submit">register</button>
+      <button type="button" (click)="navigateToRegister()">register</button>
     </form>
   </div>
   
