--- a/projekt_frontend/src/app/modules/calendar/day-details/day-details.component.css
+++ b/projekt_frontend/src/app/modules/calendar/day-details/day-details.component.css
@@ -1,30 +1,27 @@
 h1 {
     font-family: 'Share Tech Mono', monospace;
-    color: #000000; 
+    color: #000000;
     text-align: center;
     background-color: #b7b4b4;
     margin: 0;
   }
   
-  form {
+  .day-details-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: #b7b4b4;
+    padding: 20px;
   }
   
   label {
     font-family: 'Share Tech Mono', monospace;
-    color: #000000; 
+    color: #000000;
     margin-top: 10px;
   }
   
-  input,
-  textarea {
-    padding: 8px;
-    margin: 5px 0;
-    border-radius: 5px;
-    background-color: #001a1a;
+  span {
+    font-family: 'Share Tech Mono', monospace;
     color: #ffffff; 
   }
   
@@ -39,13 +36,8 @@ h1 {
     font-family: 'Share Tech Mono', monospace;
   }
   
-  button[type="submit"] {
-    background-color: #000000; 
-    color: #ffffff; 
-  }
-  
   button[type="cancel"] {
     background-color: #001a1a;
-    color: #ffffff; 
+    color: #ffffff;
   }
   
