--- a/projekt_frontend/src/app/modules/calendar/task-details/task-details.component.css
+++ b/projekt_frontend/src/app/modules/calendar/task-details/task-details.component.css
@@ -1,13 +1,4 @@
-h1 {
-    font-family: 'Share Tech Mono', monospace;
-    color: #000000;
-    text-align: center;
-    background-color: #b7b4b4;
-    margin-bottom: -1px;
-  }
-  
-  .day-details-container {
-    font-family: 'Share Tech Mono', monospace;
+.task-details-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,29 +6,46 @@ h1 {
     padding: 20px;
   }
   
-  label {
+  h1 {
+    font-family: 'Share Tech Mono', monospace;
+    color: #000000;
+    text-align: center;
+    background-color: #b7b4b4;
+    margin-bottom: -1px;
+  }
+  
+  p {
     font-family: 'Share Tech Mono', monospace;
     color: #000000;
     margin-top: 10px;
   }
   
-  span {
-    font-family: 'Share Tech Mono', monospace;
-    color: #ffffff; 
+  .buttons-container {
+    margin-top: 20px;
+    display: flex;
+    gap: 10px;
   }
   
   button {
     padding: 10px;
-    margin-top: 10px;
     border: none;
     border-radius: 10px;
     cursor: pointer;
     font-size: 16px;
-    margin-bottom: 10px;
     font-family: 'Share Tech Mono', monospace;
   }
   
-  button:hover {
+  .edit-button {
+    background-color: #001a1a;
+    color: #ffffff;
+  }
+  
+  .delete-button {
+    background-color: #cc0000;
+    color: #ffffff;
+  }
+  
+  .cancel-button {
     background-color: #001a1a;
     color: #ffffff;
   }
