--- a/projekt_frontend/src/app/modules/calendar/task-details/task-details.component.html
+++ b/projekt_frontend/src/app/modules/calendar/task-details/task-details.component.html
@@ -2,7 +2,7 @@
     <h1>{{ taskDetails.title }}</h1>
     <p>{{ taskDetails.description }}</p>
     <div class="buttons-container">
-      <button class="edit-button" (click)="handleEditClick()">Edit</button>
+      <button class="edit-button" (click)="editEvent()">Edit</button>
       <button class="delete-button" (click)="deleteEvent()">Delete</button>
       <button class="cancel-button" (click)="handleCancelClick()">Close</button>
     </div>
